HTTP Server Requests & Responses-installed nodemon

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "type": "module",
   "dependencies": {
+    "express": "^4.21.2",
     "inquirer": "^12.4.1",
     "qr-image": "^3.2.0"
   },
   "name": "web-development-projects",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
