--- a/EJS/4.0 EJS/package.json
+++ b/EJS/4.0 EJS/package.json
@@ -1,18 +1,17 @@
 {
-  "type": "module",
-  "dependencies": {
-    "express": "^4.21.2",
-    "inquirer": "^12.4.1",
-    "qr-image": "^3.2.0"
-  },
-  "name": "web-development-projects",
+  "name": "4.0-ejs",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
+  },
   "description": ""
 }
